<resources>
    <string name="app_name">Crowd Funding</string>
    <string name="crowd_funding">Crowd Funding</string>
    <string name="get_started">Get Started</string>
    <string name="name_of_the_fund">Name of the Fund</string>
    <string name="fund_details">Fund Details</string>
    <string name="submit">Submit</string>
    <string name="funding_code">Funding Code</string>
    <string name="no_funds_collected_yet">NO FUNDS COLLECTED YET</string>
    <string name="error_occurred_please_try_again">Error occurred, Please try again</string>
    <string name="fund_collection">FUND COLLECTION</string>
    <string name="_100">100</string>
    <string name="_500">500</string>
    <string name="_200">200</string>
    <string name="_1000">1000</string>
    <string name="cash">CASH</string>
    <string name="upi">UPI</string>
    <string name="upi_id">UPI ID:</string>
    <string name="upi_id_1">UPI ID</string>
    <string name="amount">AMOUNT:</string>
    <string name="enter_amount">ENTER AMOUNT</string>
    <string name="total_collection">Total Collection</string>
    <string name="name_of_the_collector">Name of the Collector:</string>
    <string name="email_of_the_collector">Email of the Collector:</string>
    <string name="total_amount_collected">Total Amount Collected:</string>
    <string name="amount_1">Amount</string>
    <string name="view_details">View Details</string>
    <string name="collectorName">collectorName</string>
    <string name="collectorEmail">collectorEmail</string>
    <string name="i_hereby_confirm_the_payment_made">I hereby confirm the payment made</string>
    <string name="submit_1">Submit</string>
    <string name="donor_name_optional">DONOR NAME(optional)</string>
    <string name="donor_name">DONOR NAME:</string>
    <string name="funding_name">Funding Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_1">Sign up</string>
    <string name="amount_2">(amount)</string>
    <string name="amount_donated">Amount Donated:</string>
    <string name="date">(date)</string>
    <string name="date_of_donation">Date of Donation:</string>
    <string name="donor_name1">Donor Name:</string>
    <string name="donor_name2">(donor name)</string>
    <string name="type2">(type)</string>
    <string name="upi_id2">(upi ID)</string>
    <string name="qrcode">QRCode</string>
    <string name="scan_amp_pay"><![CDATA[SCAN & PAY]]></string>
    <string name="username">Username</string>
    <string name="password1">Password</string>
</resources>