<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:nestedScrollingEnabled="true"
    android:orientation="vertical"
    tools:context=".SignupActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:gravity="center"
                android:shadowColor="#57000000"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="28sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_keyboard_arrow_left_black_24dp" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="#000000">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:autofillHints="" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="#000000">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:autofillHints="" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="#000000">

                <EditText
                    android:id="@+id/signupPassword"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:autofillHints="" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="#000000">

                <EditText
                    android:id="@+id/conPassword"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:autofillHints="" />

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:background="@android:drawable/btn_dropdown"
                android:entries="@array/type"
                android:spinnerMode="dropdown" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fundingCodeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="#000000">

                <EditText
                    android:id="@+id/fundingCode"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/funding_code"
                    android:inputType="text"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="#000000">

                <EditText
                    android:id="@id/fundingName_signUp"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:hint="@string/funding_name"
                    android:inputType="text"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:autofillHints="" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/signUp"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="44dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/buttonshape"
                android:onClick="signUp"
                android:text="@string/sign_up_1"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />




        </LinearLayout>


    </ScrollView>

</RelativeLayout>
